  [Michele Simionato]
  * Internal: extended `oq purge`
  * Included .onnx and .onnx.gz files in MANIFEST.in
  * Added command `oq db keep <workflow_id>`
  * Added command `oq checkout workflow.toml`
  * Extended `oq check_input` to accept workflow files
  * Added an output "Average Losses By Taxonomy"
  * Extended `oq run` to accept .toml files and to use the job cache
  * Replaced `dbserver.cache` parameter in openquake.cfg with a cache
    parameter in job.ini
  * If the site parameters are more distant than ASSOC_DIST raise an error
    and not a warning
  * Added parameter `siteid` in job.ini to specify the `custom_site_id`
  * Internal: extended baselib.sap to manage command classes
  * Saved memory in ebrisk, now most calculations can be run with 2 GB
    of RAM per core

  [Paolo Tormene]
  * Fixed the management and layout/styling of navigation buttons in the
    WebUI, with and without authentication
  * Improved the default configuration of the TOOLS_ONLY application mode

  [Michele Simionato]
  * Supported site-specific gsim logic trees via `site_labels`
  * Added `source_info` to the global SES file
  * Optimized `_save_events` for large calculations over 100,000 events
  * Parallelized the rupture prefiltering
  * Fixed `count_ruptures` producing more than 32768 tasks
  * Removed the distance filtering when sampling the ruptures; removed also the
    mosaic model filtering

  [Paul Henshaw, Paolo Tormene]
  * Force use of utf8 encoding when writing non-binary files.
  * Update AreaSource demo to use UTF8 chars that are obviously not ASCII.
  * Use utf-8-sig when reading so as to handle BOM

  [Anirudh Rao]
  * Add missing axis argument in recent bugfix in classical_risk
    with nontrivial weights in the taxonomy mapping

  [Michele Simionato]
  * Extended the global_ses script to accept job.ini files
  * Implemented `oq engine --run job1.ini .. jobN.ini --hc parent.hdf5`
  * Extended `--hc` to accept paths to datastore files